ZoneName & zone templates cleanup
This also removes MaterialZoneTemplates from DataManager.ZONE_DATA and their fake zone flags.